# FMM-Project

./: README.md  pyproject.toml  requirements.txt
cpp/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
cpp/include/: cell.hpp  fmm.hpp  sample.hpp  solver.hpp  tree.hpp  utils.hpp
cpp/src/: cell.cpp  main.cpp  sample.cpp  solver.cpp  tree.cpp  utils.cpp
cpp/test/: test.cpp
design/: Sample-Cell.ipynb  fmm.ipynb  fmm.md  fmm_cell_test.py  fmm_solver_design.py  fmm_tree_test.py  mass_sample_test.py  vpython_test.py  vpython_test_samples.py
src/: __init__.py  cell.py  hello.py  sample.py  solver.py  tree.py  utils.py
test/: test.py  test_animation.py  test_fmm.py
