[project]
name = "phy571-fmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab-vpython>=3.1.8",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pyqt6>=6.7.1",
    "scipy>=1.14.1",
    "vpython>=7.6.5",
]
